fixed with colors and alignemnts

--- a/app/assets/stylesheets/cortege_lineups.scss
+++ b/app/assets/stylesheets/cortege_lineups.scss
@@ -1,28 +1,19 @@
 @import "fonts";
 @import "colors";
 
-.hero-cortege-contributions {
-  background-image: url("https://s3-eu-west-1.amazonaws.com/lintek-sof/webapp/hero/korteget%C3%A5g.jpg");
-}
-
 .cortege-lineup-container {
   display: flex;
-  flex-flow: wrap row;
-  justify-content: flex-start;
-  align-content: center;
+  flex-flow: row wrap;
+  justify-content: space-around;
 
   .card-container {
-    margin: auto;
-    width: 20%;
+    width: 25%;
 
     .card {
-
       height: 230px;
       width: 200px;
       margin: auto;
-      h3 {
-        margin: 0;
-      }
+
       .card-title {
         font-size: 16px;
       }
@@ -36,45 +27,25 @@
           align-content: center;
           flex-wrap: wrap;
           height: 35px;
-          h3 {
-            text-align: center;
-            font-family: Arial;
-            font-size: 16px;
-            color: white;
-            margin: auto auto 5px;
-          }
-          span {
-            font-family: Arial;
-            font-size: 16px;
-            color: white;
-            margin: 5px auto auto;
-          }
+
           .card-image {
             display: flex;
             flex-flow: row nowrap;
-            align-items: center;
-          }
-        }
-        .points-container {
-          height: 100px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          h3 {
-            font-family: Arial;
-            font-size: 16px;
-            margin: auto;
+            min-width: 100%;
+            width: 100%;
           }
         }
       }
 
       .card-content.bottom-block {
+        align-content: flex-end;
+        background-color: $sof-purple-color;
         .card-title {
           line-height: 30px;
         }
         span {
           font-family: Arial;
-          color: white;
+          color: $sof-seashell-color;
         }
       }
 
